--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "git@git.corp.adobe.com:Activation/turbine-gulp-sandbox.git"
+    "url": "git@git.corp.adobe.com:reactor/turbine-gulp-sandbox.git"
   },
   "dependencies": {
     "del": "^2.0.2",
@@ -14,10 +14,10 @@
     "gulp-replace": "^0.5.4",
     "gulp-webserver": "^0.9.1",
     "jschannel": "^1.0.0",
-    "turbine": "git+ssh://git@git.corp.adobe.com:Activation/turbine.git"
+    "turbine": "git+ssh://git@git.corp.adobe.com:reactor/turbine.git"
   },
   "devDependencies": {
-    "turbine-extension-dtm": "git+ssh://git@git.corp.adobe.com:Activation/turbine-extension-dtm",
-    "turbine-extension-gua": "git+ssh://git@git.corp.adobe.com:Activation/turbine-extension-gua"
+    "turbine-extension-dtm": "git+ssh://git@git.corp.adobe.com:reactor/turbine-extension-dtm",
+    "turbine-extension-gua": "git+ssh://git@git.corp.adobe.com:reactor/turbine-extension-gua"
   }
 }
