Files from include folder are take now from the split repositories.

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "del": "^2.0.2",
+    "event-stream": "^3.3.2",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-webserver": "^0.9.1",
     "jschannel": "^1.0.0",
-    "turbine": "git+ssh://git@git.corp.adobe.com:reactor/turbine.git"
+    "lens-extension-bridge": "git+ssh://git@git.corp.adobe.com:reactor/lens-extension-bridge.git",
+    "turbine": "git+ssh://git@git.corp.adobe.com:reactor/turbine.git",
+    "turbine-gulp-iframeutilsbuilder": "git+ssh://git@git.corp.adobe.com:reactor/turbine-gulp-iframeutilsbuilder.git"
   },
   "devDependencies": {
     "turbine-extension-dtm": "git+ssh://git@git.corp.adobe.com:reactor/turbine-extension-dtm",
