--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "event-stream": "^3.3.2",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
+    "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-webserver": "^0.9.1",
