--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-webserver": "^0.9.1",
     "jschannel": "^1.0.0",
     "lens-extension-bridge": "git+ssh://git@git.corp.adobe.com:reactor/lens-extension-bridge.git",
+    "mkdirp": "^0.5.1",
     "turbine": "git+ssh://git@git.corp.adobe.com:reactor/turbine.git",
     "turbine-windgoggles": "git+ssh://git@git.corp.adobe.com:reactor/turbine-windgoggles.git",
     "webpack-stream": "^2.1.1"
