--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "registry": "https://artifactory.corp.adobe.com/artifactory/api/npm/npm-mcps-release-local"
   },
   "dependencies": {
-    "ajv": "^3.7.0",
+    "@reactor/extension-bridge": "^2.0.0",
+    "@reactor/turbine": "^2.1.0",
+    "ajv": "^3.7.1",
     "del": "^2.2.0",
     "glob": "^7.0.0",
     "gulp": "^3.9.1",
@@ -24,8 +26,7 @@
     "jschannel": "^1.0.0",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
-    "@reactor/turbine": "^2.1.0",
-    "@reactor/extension-bridge": "^2.0.0",
-    "webpack-stream": "^3.1.0"
+    "webpack-stream": "^3.1.0",
+    "yargs": "^4.1.0"
   }
 }
