--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reactor/extension-support-sandbox",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "Gulp tasks for creating a sandbox in which you can manually test your Turbine extension.",
   "author": {
     "name": "DTM",
@@ -14,7 +14,8 @@
     "registry": "https://artifactory.corp.adobe.com/artifactory/api/npm/npm-mcps-release-local"
   },
   "dependencies": {
-    "@reactor/extension-support-bridge": "^1.0.0",
+    "@reactor/extension-support-bridge": "^4.0.1",
+    "@reactor/jschannel": "^1.0.0",
     "@reactor/turbine": "^14.0.0",
     "ajv": "^4.1.3",
     "del": "^2.2.0",
@@ -23,7 +24,6 @@
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-webserver": "^0.9.1",
-    "jschannel": "^1.0.0",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "webpack-stream": "^3.2.0",
