--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
   "dependencies": {
     "@reactor/extension-support-bridge": "^4.0.3",
     "@reactor/jschannel": "^1.0.0",
-    "@reactor/turbine": "^14.0.0",
     "ajv": "^4.1.3",
-    "del": "^2.2.0",
+    "express": "^4.14.0",
+    "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
-    "gulp": "^3.9.1",
-    "gulp-insert": "^0.5.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-webserver": "^0.9.1",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "object-assign": "^4.1.0",
-    "webpack-stream": "^3.2.0",
-    "yargs": "^4.7.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1"
+  },
+  "peerDependencies": {
+    "@reactor/turbine": "*"
+  },
+  "bin": {
+    "run-extension-sandbox": "./src/server/run.js",
+    "generate-extension-sandbox-files": "./src/server/generateConsumerFiles.js"
   }
 }
