Created build script.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@reactor/turbine": "*"
   },
   "bin": {
-    "run-reactor-sandbox": "./src/server/run.js",
-    "init-reactor-sandbox": "./src/server/generateConsumerFiles.js"
+    "run-reactor-sandbox": "./src/scripts/run.js",
+    "init-reactor-sandbox": "./src/scripts/generateConsumerFiles.js",
+    "build-reactor-sandbox": "./src/scripts/build.js"
   }
 }
