--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@reactor/extension-support-bridge": "^4.0.3",
+    "@reactor/get-required-paths": "^1.0.0",
     "@reactor/jschannel": "^1.0.0",
     "ajv": "^4.1.3",
     "express": "^4.14.0",
