--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reactor/jschannel": "^1.0.0",
     "@reactor/turbine-schemas": "^1.0.0",
     "ajv": "^4.7.7",
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
