Making necessary changes for extension bridge refactor.

--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "registry": "https://artifactory.corp.adobe.com/artifactory/api/npm/npm-mcps-release-local"
   },
   "dependencies": {
-    "@reactor/extension-support-bridge": "^5.2.0",
+    "@reactor/extension-support-bridge": "^6.0.0-alpha",
     "@reactor/extension-support-validator": "^1.0.0",
     "@reactor/get-required-paths": "^1.0.0",
-    "@reactor/jschannel": "^1.0.0",
+    "@reactor/turbine-schemas": "^1.0.0",
     "ajv": "^4.7.7",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.3",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
-    "object-assign": "^4.1.0",
+    "native-promise-only-ponyfill": "^1.0.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   },
