--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
-    "fs-extra": "^0.30.0",
+    "fs-extra": "^1.0.0",
     "glob": "^7.0.3",
     "json-loader": "^0.5.4",
     "mkdirp": "^0.5.1",
     "native-promise-only-ponyfill": "^1.0.1",
+    "replace-in-file": "^2.0.2",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   },
