--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@reactor/extension-support-sandbox",
+  "name": "@adobe/composer-sandbox",
   "version": "7.13.2",
-  "description": "Tasks for creating a sandbox in which you can manually test Turbine extensions.",
+  "description": "Tasks for creating a sandbox for manually testing Composer extensions.",
   "author": {
     "name": "DTM",
     "email": "DTM-Engineering@adobe.com"
@@ -10,12 +10,9 @@
     "type": "git",
     "url": "git@git.corp.adobe.com:reactor/extension-support-sandbox.git"
   },
-  "publishConfig": {
-    "registry": "https://artifactory.corp.adobe.com/artifactory/api/npm/npm-mcps-release-local"
-  },
   "dependencies": {
-    "@reactor/extension-support-bridge": "^7.0.0",
-    "@reactor/extension-support-validator": "^1.0.0",
+    "@adobe/composer-bridge": "^7.0.0",
+    "@adobe/composer-validator": "^1.0.0",
     "ajv": "^4.7.7",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
@@ -34,9 +31,9 @@
     "webpack-dev-middleware": "^1.6.1"
   },
   "peerDependencies": {
-    "@reactor/turbine": "*"
+    "@adobe/composer-turbine": "*"
   },
   "bin": {
-    "reactor-sandbox": "./src/tasks/index.js"
+    "composer-sandbox": "./src/tasks/index.js"
   }
 }
