--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "7.13.6",
   "description": "Tasks for creating a sandbox for manually testing extensions.",
   "author": {
-    "name": "Adobe Systems Incorporated",
+    "name": "Adobe Systems",
     "url": "http://adobe.com",
     "email": "reactor@adobe.com"
   },
