--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "webpack-dev-middleware": "^1.6.1"
   },
   "peerDependencies": {
-    "@adobe/reactor-turbine": "*"
+    "@adobe/reactor-turbine": ">=18.2.0"
   },
   "bin": {
     "reactor-sandbox": "./src/tasks/index.js"
