--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "chalk": "^1.1.3",
+    "deep-equal": "^1.0.1",
     "express": "^4.14.0",
     "fs-extra": "^3.0.1",
     "glob": "^7.0.3",
