--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "native-promise-only-ponyfill": "^1.0.1",
     "replace-in-file": "^2.6.4",
     "split.js": "^1.2.0",
+    "update-notifier": "^2.4.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.6.1"
   },
