--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "fs-extra": "^3.0.1",
     "glob": "^7.0.3",
+    "js-beautify": "^1.7.5",
     "json-loader": "^0.5.4",
     "match-requires": "^1.0.2",
     "mkdirp": "^0.5.1",
