--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/reactor-sandbox",
-  "version": "9.0.6",
+  "version": "9.0.7-alpha.5",
   "description": "Tasks for creating a sandbox for manually testing Launch extensions.",
   "author": {
     "name": "Adobe Systems",
@@ -13,7 +13,9 @@
     "url": "git@github.com:Adobe-Marketing-Cloud/reactor-sandbox.git"
   },
   "scripts": {
-    "lint": "eslint 'src/**/*.js'"
+    "lint": "eslint 'src/**/*.js'",
+    "prepack": "cp -R node_modules/reactor-sandbox-rule-editor/build ./editor",
+    "postpack": "rm -R ./editor"
   },
   "dependencies": {
     "@adobe/reactor-bridge": "9.2.1",
@@ -34,7 +36,6 @@
     "match-requires": "^1.0.2",
     "mkdirp": "^0.5.1",
     "native-promise-only-ponyfill": "^1.0.1",
-    "reactor-sandbox-rule-editor": "git+https://github.com/dompuiu/reactor-sandbox-editor.git",
     "replace-in-file": "^2.6.4",
     "semver-diff": "^2.1.0",
     "split.js": "^1.2.0",
@@ -45,6 +46,7 @@
     "reactor-sandbox": "./src/tasks/index.js"
   },
   "devDependencies": {
-    "eslint": "^4.9.0"
+    "eslint": "^4.9.0",
+    "reactor-sandbox-rule-editor": "^1.0.1"
   }
 }
