--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/reactor-sandbox",
-  "version": "9.0.6",
+  "version": "9.0.7-alpha.5",
   "description": "Tasks for creating a sandbox for manually testing Launch extensions.",
   "author": {
     "name": "Adobe Systems",
@@ -13,11 +13,13 @@
     "url": "git@github.com:Adobe-Marketing-Cloud/reactor-sandbox.git"
   },
   "scripts": {
-    "lint": "eslint 'src/**/*.js'"
+    "lint": "eslint 'src/**/*.js'",
+    "prepack": "cp -R node_modules/reactor-sandbox-rule-editor/build ./editor",
+    "postpack": "rm -R ./editor"
   },
   "dependencies": {
-    "@adobe/reactor-turbine": "25.1.0",
     "@adobe/reactor-bridge": "9.2.1",
+    "@adobe/reactor-turbine": "25.1.0",
     "@adobe/reactor-validator": "1.2.0",
     "ajv": "^5.2.3",
     "babel-core": "^6.18.2",
@@ -29,6 +31,7 @@
     "express": "^4.16.2",
     "fs-extra": "^3.0.1",
     "glob": "^7.0.3",
+    "js-beautify": "^1.7.5",
     "json-loader": "^0.5.4",
     "match-requires": "^1.0.2",
     "mkdirp": "^0.5.1",
@@ -43,6 +46,7 @@
     "reactor-sandbox": "./src/tasks/index.js"
   },
   "devDependencies": {
-    "eslint": "^4.9.0"
+    "eslint": "^4.9.0",
+    "reactor-sandbox-rule-editor": "^1.0.1"
   }
 }
