--- a/package.json
+++ b/package.json
@@ -18,34 +18,33 @@
     "postpack": "rm -R ./editor"
   },
   "dependencies": {
-    "@adobe/reactor-bridge": "9.2.1",
-    "@adobe/reactor-turbine": "25.1.0",
-    "@adobe/reactor-validator": "1.2.0",
-    "ajv": "^5.2.3",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^7.1.0",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "chalk": "^1.1.3",
+    "@adobe/reactor-bridge": "9.2.3",
+    "@adobe/reactor-turbine": "25.1.3",
+    "@adobe/reactor-validator": "^2.0.2",
+    "ajv": "^6.5.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "chalk": "^2.4.1",
     "deep-equal": "^1.0.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "fs-extra": "^6.0.1",
-    "glob": "^7.0.3",
+    "glob": "^7.1.2",
     "js-beautify": "^1.7.5",
-    "json-loader": "^0.5.4",
-    "match-requires": "^1.0.2",
+    "match-requires": "^2.0.1",
     "native-promise-only-ponyfill": "^1.0.1",
-    "replace-in-file": "^2.6.4",
+    "replace-in-file": "^3.4.0",
     "semver-diff": "^2.1.0",
-    "split.js": "^1.2.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.6.1"
+    "split.js": "^1.3.5",
+    "webpack": "^4.12.1",
+    "webpack-dev-middleware": "^3.1.3"
   },
   "bin": {
     "reactor-sandbox": "./src/tasks/index.js"
   },
   "devDependencies": {
-    "eslint": "^4.9.0",
+    "eslint": "^5.0.1",
     "reactor-sandbox-rule-editor": "^1.0.6"
   }
 }
