--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postpack": "rm -R ./editor"
   },
   "dependencies": {
-    "@adobe/reactor-bridge": "10.0.0",
+    "@adobe/reactor-bridge": "^10.1.0",
     "@adobe/reactor-turbine": "25.4.0",
     "@adobe/reactor-validator": "2.0.6",
     "ajv": "^6.5.1",
@@ -45,6 +45,6 @@
   },
   "devDependencies": {
     "eslint": "^5.0.1",
-    "reactor-sandbox-rule-editor": "^1.2.1"
+    "reactor-sandbox-rule-editor": "^1.3.0"
   }
 }
