Making reactor dependencies use caret range.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@adobe/reactor-bridge": "^10.1.0",
-    "@adobe/reactor-turbine": "25.4.1",
-    "@adobe/reactor-validator": "2.0.6",
+    "@adobe/reactor-turbine": "^25.4.1",
+    "@adobe/reactor-validator": "^2.0.6",
     "ajv": "^6.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
