--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@adobe/reactor-bridge": "^10.1.0",
     "@adobe/reactor-turbine": "^25.4.1",
     "@adobe/reactor-validator": "^2.0.6",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "ajv": "^6.5.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "chalk": "^2.4.1",
     "deep-equal": "^1.0.1",
     "express": "^4.16.3",
