--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "webpack-dev-middleware": "^3.1.3"
   },
   "bin": {
-    "reactor-sandbox": "./src/tasks/index.js"
+    "reactor-sandbox": "src/cli.js"
   },
+  "main": "src/lib.js",
   "devDependencies": {
     "eslint": "^5.0.1",
     "reactor-sandbox-rule-editor": "^1.3.0"
