--- a/package.json
+++ b/package.json
@@ -18,14 +18,10 @@
     "postpack": "rm -R ./editor"
   },
   "dependencies": {
-    "@adobe/reactor-bridge": "^10.1.0",
+    "@adobe/reactor-bridge": "^11.0.0",
     "@adobe/reactor-turbine": "^25.4.1",
     "@adobe/reactor-validator": "^2.0.6",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
     "ajv": "^6.5.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chalk": "^2.4.1",
     "deep-equal": "^1.0.1",
     "express": "^4.16.3",
@@ -33,12 +29,10 @@
     "glob": "^7.1.2",
     "js-beautify": "^1.7.5",
     "match-requires": "^2.0.1",
-    "native-promise-only-ponyfill": "^1.0.1",
+    "parcel-bundler": "^1.12.3",
     "replace-in-file": "^3.4.0",
     "semver-diff": "^2.1.0",
-    "split.js": "^1.3.5",
-    "webpack": "^4.12.1",
-    "webpack-dev-middleware": "^3.1.3"
+    "split.js": "^1.3.5"
   },
   "bin": {
     "reactor-sandbox": "src/cli.js"
