--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   },
   "scripts": {
     "lint": "eslint 'src/**/*.js'",
-    "prepack": "cp -R node_modules/reactor-sandbox-rule-editor/build ./editor",
+    "build-view-sandbox": "rm -rf dist && cp -r src/client/public dist && NODE_ENV=production parcel build src/client/src/viewSandbox.js --out-dir dist --out-file viewSandbox.js --no-cache",
+    "build-editor": "cp -R node_modules/reactor-sandbox-rule-editor/build ./editor",
+    "prepack": "npm run build-view-sandbox && npm run build-editor",
     "postpack": "rm -R ./editor"
   },
   "dependencies": {
     "@adobe/reactor-bridge": "^11.0.0",
     "@adobe/reactor-turbine": "^25.4.1",
     "@adobe/reactor-validator": "^2.0.6",
-    "ajv": "^6.5.1",
+    "ajv": "^6.10.0",
     "chalk": "^2.4.1",
     "deep-equal": "^1.0.1",
     "express": "^4.16.3",
@@ -29,10 +31,8 @@
     "glob": "^7.1.2",
     "js-beautify": "^1.7.5",
     "match-requires": "^2.0.1",
-    "parcel-bundler": "^1.12.3",
-    "replace-in-file": "^3.4.0",
     "semver-diff": "^2.1.0",
-    "split.js": "^1.3.5"
+    "split.js": "^1.5.11"
   },
   "bin": {
     "reactor-sandbox": "src/cli.js"
@@ -40,6 +40,7 @@
   "main": "src/lib.js",
   "devDependencies": {
     "eslint": "^5.0.1",
+    "parcel-bundler": "^1.12.3",
     "reactor-sandbox-rule-editor": "^1.3.0"
   }
 }
