--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/reactor-sandbox",
-  "version": "10.9.0",
+  "version": "10.8.1",
   "description": "Tasks for creating a sandbox for manually testing Launch extensions.",
   "author": {
     "name": "Adobe Systems",
@@ -12,35 +12,77 @@
     "type": "git",
     "url": "git@github.com:adobe/reactor-sandbox.git"
   },
+  "bin": {
+    "reactor-sandbox": "src/cli.js"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "main": "src/lib.js",
   "scripts": {
+    "reactor-bridge-update": "mkdir -p public/extensionbridge && cp node_modules/@adobe/reactor-bridge/dist/extensionbridge-child.js public/extensionbridge/extensionbridge-child.js",
+    "reactor-bridge-check": "cmp --silent public/extensionbridge/extensionbridge-child.js node_modules/@adobe/reactor-bridge/dist/extensionbridge-child.js || (echo 'Extension bridge is out of date. Please go to the sandbox folder and run `npm run reactor-bridge-update`.' && exit 1)",
+    "prepare": "npm run reactor-bridge-update",
     "lint": "eslint 'src/**/*.js'",
-    "build-view-sandbox": "rm -rf dist && cp -r src/client/public dist && NODE_ENV=production parcel build src/client/src/viewSandbox.js --out-dir dist --out-file viewSandbox.js --no-cache",
-    "build-editor": "cp -R node_modules/reactor-sandbox-rule-editor/build ./editor",
-    "prepack": "npm run build-view-sandbox && npm run build-editor",
-    "postpack": "rm -R ./editor"
+    "build:viewsEditor": "rm -rf dist && cp -r src/client/public dist && NODE_ENV=production parcel build src/client/src/viewSandbox.js --out-dir dist --out-file viewSandbox.js --no-cache",
+    "build:rulesEditor": "npm run reactor-bridge-update && react-scripts build",
+    "build": "rm -rf dist && npm run build:viewsEditor && npm run build:rulesEditor",
+    "start:viewsEditor": "watch \"cp -v -r ./src/client/public/ dist\" ./src/client/public & parcel watch src/client/src/viewSandbox.js --out-dir dist --out-file viewSandbox.js --no-cache",
+    "start:rulesEditor": "npm run reactor-bridge-update && react-scripts start --no-cache",
+    "start": "rm -rf dist && npm run start:viewsEditor & npm run start:rulesEditor"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.2.0",
     "@adobe/reactor-bridge": "^11.0.0",
-    "@adobe/reactor-turbine": "^26.0.2",
+    "@adobe/reactor-turbine": "^25.8.0",
     "@adobe/reactor-validator": "^2.0.8",
-    "ajv": "^6.12.5",
+    "@ramda/indexby": "^0.26.1",
+    "@react-spectrum/tabs": "^3.0.0-alpha.0",
+    "@rematch/core": "^1.4.0",
+    "ajv": "^6.12.3",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
+    "codemirror": "^5.56.0",
     "deep-equal": "^2.0.3",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
-    "js-beautify": "^1.13.0",
+    "immutable": "^3.8.2",
+    "js-beautify": "^1.11.0",
+    "jshint": "^2.12.0",
+    "jsonlint-mod": "^1.7.5",
     "match-requires": "^2.0.1",
+    "react": "^16.13.1",
+    "react-codemirror2": "^7.2.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-last-location": "^2.0.1",
+    "react-scripts": "^3.4.1",
     "semver-diff": "^3.1.1",
     "split.js": "^1.6.2"
   },
-  "bin": {
-    "reactor-sandbox": "src/cli.js"
-  },
-  "main": "src/lib.js",
   "devDependencies": {
-    "eslint": "^7.9.0",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "parcel-bundler": "^1.12.4",
-    "reactor-sandbox-rule-editor": "^1.3.1"
+    "prettier": "^2.0.5",
+    "watch": "^1.0.2"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
