--- a/package.json
+++ b/package.json
@@ -30,7 +30,20 @@
     "build:rulesEditor": "npm run reactor-bridge-update && react-scripts build",
     "build": "rm -rf dist && npm run build:rulesEditor",
     "start:rulesEditor": "npm run reactor-bridge-update && react-scripts start --no-cache",
-    "start": "rm -rf dist && npm run start:rulesEditor"
+    "start": "rm -rf dist && npm run start:rulesEditor",
+    "format": "pretty-quick",
+    "test": "jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && lint-staged",
+      "pre-push": "npm test"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint -- --fix"
+    ]
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.5.0",
@@ -79,8 +92,13 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "jest-runner-eslint": "^0.10.0",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.2"
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0"
   },
   "engines": {
     "node": ">=10.0.0"
