Jest is provided by create-react-app.

--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "reactor-bridge-check": "cmp --silent public/extensionbridge/extensionbridge-child.js node_modules/@adobe/reactor-bridge/dist/extensionbridge-child.js || (echo 'Extension bridge is out of date. Please go to the sandbox folder and run `npm run reactor-bridge-update`.' && exit 1)",
     "prepare": "npm run reactor-bridge-update",
     "lint": "eslint 'src/**/*.js'",
-    "build:rulesEditor": "npm run reactor-bridge-update && react-scripts build",
-    "build": "rm -rf dist && npm run build:rulesEditor",
-    "start:rulesEditor": "npm run reactor-bridge-update && react-scripts start --no-cache",
-    "start": "rm -rf dist && npm run start:rulesEditor",
+    "build:reactApp": "npm run reactor-bridge-update && react-scripts build",
+    "build": "rm -rf dist && npm run build:reactApp",
+    "start:reactApp": "npm run reactor-bridge-update && react-scripts start --no-cache",
+    "start": "rm -rf dist && npm run start:reactApp",
     "format": "pretty-quick",
     "test": "jest"
   },
@@ -93,7 +93,6 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
     "jest-runner-eslint": "^0.10.0",
     "parcel-bundler": "^1.12.4",
     "lint-staged": "^10.5.1",
