--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "reactor-bridge-update": "mkdir -p public/extensionbridge && cp node_modules/@adobe/reactor-bridge/dist/extensionbridge-child.js public/extensionbridge/extensionbridge-child.js",
     "reactor-bridge-check": "cmp --silent public/extensionbridge/extensionbridge-child.js node_modules/@adobe/reactor-bridge/dist/extensionbridge-child.js || (echo 'Extension bridge is out of date. Please go to the sandbox folder and run `npm run reactor-bridge-update`.' && exit 1)",
     "prepare": "npm run reactor-bridge-update",
-    "lint": "eslint 'src/**/*.js'",
+    "lint": "eslint 'src/**'",
     "build:reactApp": "npm run reactor-bridge-update && react-scripts build",
     "build": "rm -rf dist && npm run build:reactApp",
     "start:reactApp": "npm run reactor-bridge-update && react-scripts start --no-cache",
@@ -87,6 +87,7 @@
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-header": "^3.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
