--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@ramda/indexby": "^0.26.1",
     "@react-spectrum/icon": "^3.3.0",
     "@react-spectrum/tabs": "^3.0.0-alpha.2",
+    "@react-spectrum/table": "^3.0.0-alpha.8",
     "@rematch/core": "^1.4.0",
     "@spectrum-icons/illustrations": "^3.2.0",
     "@spectrum-icons/workflow": "^3.2.0",
