--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
-    "immutable": "^3.8.2",
+    "immer": "^8.0.0",
     "js-beautify": "^1.13.0",
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
