--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     "@adobe/reactor-turbine": "^26.0.2",
     "@adobe/reactor-turbine-edge": "^2.0.0",
     "@adobe/reactor-validator": "^2.0.8",
+    "@babel/core": "^7.12.9",
+    "@babel/generator": "^7.12.5",
+    "@babel/parser": "^7.12.7",
+    "@babel/traverse": "^7.12.9",
     "@ramda/indexby": "^0.26.1",
     "@react-spectrum/icon": "^3.3.0",
     "@react-spectrum/table": "^3.0.0-alpha.9",
@@ -73,6 +77,7 @@
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
     "match-requires": "^2.0.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
@@ -85,7 +90,6 @@
     "semver-diff": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "babel-eslint": "^10.1.0",
