--- a/package.json
+++ b/package.json
@@ -47,9 +47,16 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.6.0",
+    "@adobe/reactor-babel-plugin-replace-tokens-edge": "^1.0.0",
     "@adobe/reactor-bridge": "^11.0.0",
+    "@adobe/reactor-token-scripts-edge": "^1.1.1",
     "@adobe/reactor-turbine": "^26.0.2",
+    "@adobe/reactor-turbine-edge": "^2.0.0",
     "@adobe/reactor-validator": "^2.0.8",
+    "@babel/core": "^7.12.9",
+    "@babel/generator": "^7.12.5",
+    "@babel/parser": "^7.12.7",
+    "@babel/traverse": "^7.12.9",
     "@ramda/indexby": "^0.26.1",
     "@react-spectrum/icon": "^3.3.0",
     "@react-spectrum/table": "^3.0.0-alpha.9",
@@ -70,9 +77,11 @@
     "jshint": "^2.12.0",
     "jsonlint-mod": "^1.7.6",
     "match-requires": "^2.0.1",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
@@ -81,7 +90,6 @@
     "semver-diff": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "babel-eslint": "^10.1.0",
@@ -96,7 +104,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "jest-runner-eslint": "^0.10.0",
-    "parcel-bundler": "^1.12.4",
     "lint-staged": "^10.5.2",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
