--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -4,21 +4,22 @@
 name: ci
 
 on:
-  push:
-    branches: [master]
   pull_request:
     branches: [master]
 
 jobs:
   build:
+    name: 'Unit Test'
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js '14.x'
-        uses: actions/setup-node@v1
+      - uses: actions/cache@v2
+        id: npm-cache
         with:
-          node-version: '14.x'
-      - run: npm ci
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.npm-cache.outputs.cache-hit != 'true'
+        run: npm ci
       - run: npm run build --if-present
       - run: npm test
