--- a/package.json
+++ b/package.json
@@ -32,84 +32,79 @@
     "start": "rm -rf dist && npm run start:reactApp",
     "prepack": "npm run build",
     "format": "pretty-quick",
-    "test": "jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && lint-staged",
-      "pre-push": "npm test"
-    }
+    "test": "jest",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.js": [
-      "npm run lint -- --fix"
+      "eslint --cache --fix"
     ]
   },
   "dependencies": {
-    "@adobe/react-spectrum": "^3.7.0",
+    "@adobe/react-spectrum": "^3.11.2",
     "@adobe/reactor-babel-plugin-replace-tokens-edge": "^1.0.0",
-    "@adobe/reactor-bridge": "^11.0.0",
-    "@adobe/reactor-extension-core-edge": "^1.0.1",
+    "@adobe/reactor-bridge": "^11.0.1",
+    "@adobe/reactor-extension-core-edge": "^1.1.0",
     "@adobe/reactor-token-scripts-edge": "^1.1.1",
-    "@adobe/reactor-turbine": "^26.0.2",
-    "@adobe/reactor-turbine-edge": "^2.0.0",
-    "@adobe/reactor-validator": "^2.0.8",
-    "@babel/core": "^7.12.10",
-    "@babel/generator": "^7.12.11",
-    "@babel/parser": "^7.12.11",
-    "@babel/traverse": "^7.12.12",
+    "@adobe/reactor-turbine": "^27.1.3",
+    "@adobe/reactor-turbine-edge": "^2.1.0",
+    "@adobe/reactor-validator": "^2.0.9",
+    "@babel/core": "^7.14.6",
+    "@babel/generator": "^7.14.5",
+    "@babel/parser": "^7.14.7",
+    "@babel/traverse": "^7.14.7",
     "@ramda/indexby": "^0.26.1",
-    "@react-spectrum/icon": "^3.3.0",
-    "@react-spectrum/table": "^3.0.0-alpha.9",
-    "@react-spectrum/tabs": "^3.0.0-alpha.3",
-    "@rematch/core": "^1.4.0",
+    "@react-spectrum/icon": "^3.3.1",
+    "@react-spectrum/table": "^3.0.0-beta.1",
+    "@react-spectrum/tabs": " 3.0.0-alpha.3",
+    "@rematch/core": "^2.0.1",
     "@spectrum-icons/illustrations": "^3.2.1",
     "@spectrum-icons/workflow": "^3.2.0",
     "ajv": "^6.12.6",
     "body-parser": "^1.19.0",
-    "chalk": "^4.1.0",
-    "codemirror": "^5.59.1",
+    "chalk": "^4.1.1",
+    "codemirror": "^5.62.0",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
-    "glob": "^7.1.6",
-    "immer": "^8.0.0",
-    "js-beautify": "^1.13.0",
-    "jshint": "^2.12.0",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.1.7",
+    "immer": "^9.0.3",
+    "js-beautify": "^1.14.0",
+    "jshint": "^2.13.0",
     "jsonlint-mod": "^1.7.6",
     "match-requires": "^2.0.1",
     "node-fetch": "^2.6.1",
     "pkg-dir": "^5.0.0",
     "pkg-up": "^3.1.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "^17.0.1",
-    "react-json-view": "^1.19.1",
-    "react-redux": "^7.2.2",
+    "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
-    "react-scripts": "^4.0.1",
-    "react-split": "^2.0.9",
+    "react-scripts": "^4.0.3",
+    "react-split": "^2.0.11",
     "semver-diff": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-header": "^3.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.6",
-    "jest-runner-eslint": "^0.10.0",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "husky": "^6.0.0",
+    "jest-runner-eslint": "^0.10.1",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1"
   },
   "engines": {
     "node": ">=12.13.0"
