--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-router-last-location": "^2.0.1",
-    "react-scripts": "^4.0.3",
     "react-split": "^2.0.11",
     "semver-diff": "^3.1.1"
   },
@@ -101,9 +100,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.1",
     "jest-runner-eslint": "^0.10.1",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1"
+    "pretty-quick": "^3.1.1",
+    "react-scripts": "^4.0.3"
   },
   "engines": {
     "node": ">=12.13.0"
