--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     "@babel/generator": "^7.15.4",
     "@babel/parser": "^7.15.6",
     "@babel/traverse": "^7.15.4",
+    "@codemirror/basic-setup": "^0.19.0",
+    "@codemirror/gutter": "^0.19.2",
+    "@codemirror/lang-json": "^0.19.1",
+    "@codemirror/lint": "^0.19.2",
     "@ramda/indexby": "^0.26.1",
     "@rematch/core": "^2.1.0",
     "@spectrum-icons/illustrations": "^3.2.2",
@@ -60,7 +64,6 @@
     "ajv": "^6.12.6",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
-    "codemirror": "^5.62.3",
     "deep-equal": "^2.0.5",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
@@ -74,7 +77,6 @@
     "pkg-dir": "^5.0.0",
     "pkg-up": "^3.1.0",
     "react": "^17.0.2",
-    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.5",
@@ -101,7 +103,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.0",
     "pretty-quick": "^3.1.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^3.4.4"
   },
   "engines": {
     "node": ">=12.13.0"
