--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@spectrum-icons/illustrations": "^3.2.2",
     "@spectrum-icons/workflow": "^3.2.1",
     "ajv": "^8.11.0",
+    "ajv-draft-04": "^1.0.0",
+    "ajv-formats": "^2.1.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
     "deep-equal": "^2.0.5",
