--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adobe/reactor-sandbox",
   "version": "12.4.0",
-  "description": "Tasks for creating a sandbox for manually testing Launch extensions.",
+  "description": "Tasks for creating a sandbox for manually testing Tags extensions.",
   "author": {
     "name": "Adobe Systems",
     "url": "http://adobe.com",
