--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adobe/reactor-sandbox",
-  "version": "12.4.0",
+  "version": "12.5.0-beta.0",
   "description": "Tasks for creating a sandbox for manually testing Tags extensions.",
   "author": {
     "name": "Adobe Systems",
@@ -48,7 +48,7 @@
     "@adobe/reactor-token-scripts-edge": "^1.1.3",
     "@adobe/reactor-turbine": "^27.2.0",
     "@adobe/reactor-turbine-edge": "^2.1.0",
-    "@adobe/reactor-validator": "^2.2.0",
+    "@adobe/reactor-validator": "^2.3.0-beta.0",
     "@babel/core": "^7.15.8",
     "@babel/generator": "^7.15.8",
     "@babel/parser": "^7.15.8",
@@ -61,7 +61,7 @@
     "@rematch/core": "^2.1.1",
     "@spectrum-icons/illustrations": "^3.2.2",
     "@spectrum-icons/workflow": "^3.2.1",
-    "ajv": "^8.11.0",
+    "ajv": "^8.12.0",
     "ajv-draft-04": "^1.0.0",
     "ajv-formats": "^2.1.1",
     "body-parser": "^1.19.0",
@@ -108,6 +108,6 @@
     "react-scripts": "^5.0.0"
   },
   "engines": {
-    "node": ">=14.17.0"
+    "node": ">=14.21.2"
   }
 }
