update dev.yaml to use node14

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -8,6 +8,7 @@ on:
     branches: [master]
   push:
     branches: [master]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
       - uses: actions/cache@v2
         id: npm-cache
         with:
