--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -8,7 +8,7 @@ on:
     inputs:
       tag:
         description: 'The tag to publish to: latest | next'
-        required: true
+        required: false
         default: 'latest'
   release:
     types: [created]
@@ -16,63 +16,36 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
+    outputs:
+      npm_tag: ${{github.event.inputs.tag}}
     steps:
       - name: Check Tag Name
-        if: ${{ github.event.inputs.tag != 'latest' && github.event.inputs.tag != 'next' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag != 'latest' && github.event.inputs.tag != 'next' }}
         run: |
           echo 'Only the tags "latest" or "next" are supported. You entered "${{ github.event.inputs.tag }}"'
           exit 1
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
         with:
-          node-version: 'lts/fermium'
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-      - name: Install & Test
-        run: |
-          npm ci
-          npm test
-      - name: Publish to NPM
-        uses: JS-DevTools/npm-publish@v2
+          node-version: 'lts/hydrogen'
+          registry-url: https://registry.npmjs.org/
+      - uses: actions/cache@v2
+        id: npm-cache
         with:
-          tag: ${{ github.event.inputs.tag }}
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.npm-cache.outputs.cache-hit != 'true'
+        run: npm ci
+      #- run: npm test
+      - uses: JS-DevTools/npm-publish@v3
+        with:
           token: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+          tag: ${{ github.event.inputs.tag || 'latest' }}
+          access: 'public'
 
-  notify-slack:
-    needs:
-      - publish-npm
-    if: ${{ github.event.inputs.tag == 'latest' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Find Latest Tag
-        id: get-latest-release
-        run: echo "repo-tag=$(git tag --sort=committerdate | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+$' | tail -1)" >> "$GITHUB_OUTPUT"
-      - name: Notify Slack of Release
-        uses: tokorom/action-slack-incoming-webhook@main
-        env:
-          INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        with:
-          text: 'A new version of ${{ github.event.repository.full_name }}[${{ steps.get-latest-release.outputs.repo-tag }}] has been released'
-          attachments: |
-            [
-              {
-                "color": "good",
-                "author_name": "${{ github.actor }}",
-                "author_icon": "${{ github.event.sender.avatar_url }}",
-                "fields": [
-                  {
-                    "title": "Repo URL",
-                    "value": "${{ github.event.repository.html_url }}"
-                  },
-                  {
-                    "title": "See Releases",
-                    "value": "${{ github.event.repository.html_url }}/releases"
-                  }
-                ]
-              }
-            ]
+  ci-notify:
+    needs: publish-npm
+    uses: adobe/reactor-sandbox/.github/workflows/notify.yaml@master
+    with:
+      tag: ${{github.event.inputs.tag}}
